tools/tests/ui/fail/l1031.cnf
// Test file for error code: L1031
// Expected error: Missing Illegal character in encoding -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
